# kindle-home

./: readme.md
api/: Cargo.toml
api/config/: dev.yml
api/src/: configuration.rs  lib.rs  main.rs  server.rs
api/src/routes/: health_check.rs  hue.rs  mod.rs
api/src/services/: hue_client.rs  mod.rs
api/tests/: health_check.rs  test_app.rs
